# agent-harness-lab

./: .gitignore  README.md  README.zh-CN.md  agent_workflow.py  application-answer.md  evidence-checklist.md  harness.yaml  pyproject.toml
agent_harness_lab/: __init__.py  checks.py  cli.py  config.py  engine.py  reporting.py  scanner.py  state.py
docs/: evaluation-strategy.md  runtime-contract.md
examples/: task.md
output/: events.jsonl  run-report.md  run-result.json
tests/: test_agent_workflow.py  test_project_ready_harness.py
